--- a/index.html
+++ b/index.html
@@ -11,40 +11,40 @@
 <body>
    <div class="wrapper"> 
        <div class="row">
-           <div class="col-sm-4 col-lg-1">
+           <div class="col-sm-4 col-md-2 col-lg-1">
              <img src="img/circle.png" alt="" class="img-responsive" data-rjs="2">
            </div>
-           <div class="col-sm-4 col-lg-1">
+           <div class="col-sm-4 col-md-2 col-lg-1">
              <div> </div> 
            </div> 
-           <div class="col-sm-4 col-lg-1">
+           <div class="col-sm-4  col-md-2 col-lg-1">
              <div> </div> 
            </div> 
-           <div class="col-sm-4 col-lg-1">
+           <div class="col-sm-4 col-md-2 col-lg-1">
              <div> </div> 
            </div> 
-           <div class="col-sm-4 col-lg-1">
+           <div class="col-sm-4 col-md-2 col-lg-1">
              <div> </div> 
            </div> 
-           <div class="col-sm-4 col-lg-1">
+           <div class="col-sm-4 col-md-2 col-lg-1">
              <div> </div> 
            </div> 
-           <div class="col-sm-4 col-lg-1">
+           <div class="col-sm-4 col-md-2 col-lg-1">
              <div> </div> 
            </div> 
-           <div class="col-sm-4 col-lg-1">
+           <div class="col-sm-4 col-md-2 col-lg-1">
              <div> </div> 
            </div> 
-           <div class="col-sm-4 col-lg-1">
+           <div class="col-sm-4 col-md-2 col-lg-1">
              <div> </div> 
            </div> 
-           <div class="col-sm-4 col-lg-1">
+           <div class="col-sm-4 col-md-2 col-lg-1">
              <div> </div> 
            </div> 
-           <div class="col-sm-4 col-lg-1">
+           <div class="col-sm-4 col-md-2 col-lg-1">
              <div> </div> 
            </div> 
-           <div class="col-sm-4 col-lg-1">
+           <div class="col-sm-4 col-md-2 col-lg-1">
              <div> </div> 
            </div> 
        </div>
@@ -83,13 +83,13 @@
            </div>
        </div>
        <div class="row">
-           <div class="col-sm-4 col-md-4 col-lg-4">
+           <div class="col-sm-4 md-col-2">
                <div> </div>
            </div>
-           <div class="col-sm-4 col-md-4 col-lg-4">
+           <div class="col-sm-4 md-col-6">
                <div> </div>
            </div>
-           <div class="col-sm-4 col-md-4 col-lg-4">
+           <div class="col-sm-4 md-col-4">
                <div> </div>
            </div>
        </div>
@@ -106,10 +106,10 @@
        </div>
        
        <div class="row">
-           <figure class="col-sm-6 col-md-6 col-lg-6">
+           <figure class="col-sm-6">
                <img src="img/bg-mountains" alt="" class="img-responsive">
            </figure>
-           <div class="col-sm-6 col-md-6 col-lg-6" id="bg-flowers">
+           <div class="col-sm-6" id="bg-flowers">
                
            </div>
        </div>
@@ -123,10 +123,10 @@
            </div>
        </div>
        <div class="row">
-           <div class="col-sm-8 col-lg-8">
+           <div class="col-sm-8">
                <div> </div>
            </div> 
-           <div class="col-sm-4 col-lg-4">
+           <div class="col-sm-4">
                <div> </div>
            </div>
        </div> 
@@ -147,15 +147,15 @@
            </div>
        </div>   
        <div class="row">
-           <div class="col-sm-6 col-lg-11">
+           <div class="col-sm-6 col-md-9 col-lg-11">
                <div> </div>
            </div> 
-           <div class="col-sm-6 col-lg-1">
+           <div class="col-sm-6 col-md-3 col-lg-1">
                <div> </div>
            </div>
        </div>
      <div class="row">
-           <div class="col-sm-12 col-lg-12">
+           <div class="col-sm-12">
                <div> </div>
            </div> 
        </div>
